--- a/Correios.Pacotes/Correios.Pacotes.csproj
+++ b/Correios.Pacotes/Correios.Pacotes.csproj
@@ -21,6 +21,8 @@
 
   <ItemGroup>
     <PackageReference Include="CsQuery.NETStandard" Version="1.3.6.1" />
+    <PackageReference Include="Dapper" Version="2.0.90" />
+    <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="2.19.91" />
   </ItemGroup>
 
 </Project>
